# autogen-ext-oracle

./: .gitignore  pyproject.toml
src/autogen_ext_oracle/: __init__.py  oraclevs.py
tests/: test_oraclevs.py
tests/resources/: README.md
