[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "autogen-ext-oracle"
version = "0.0.1"
authors = [
    {name = "Elif Sema Balcioglu", email = "elif.balcioglu@oracle.com"},
]
dependencies = [
    "autogen-core>=0.4",
    "oracledb>=2.0.0",
]
description = "Oracle Vector Store Integration with AutoGen"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["autogen", "agent", "AI", "Oracle"]
classifiers = [
  "Programming Language :: Python :: 3"
]